# dotfiles

./: .gitattributes  .gitignore  README.md  starship.toml
.agents/: .skill-lock.json
.claude/: CLAUDE.md  settings.json
.devcontainer/: devcontainer.json
.wrangler/: metrics.json
agent-tools/: .gitignore  README.md
agent-tools/session-analyzer/: pyproject.toml
agent-tools/session-analyzer/src/session_analyzer/: __main__.py  ask.py
agent-tools/session-analyzer/tests/: test_ask.py
agents/: .gitignore  .skill-lock.json  AGENTS.md  aplus.aplus-resolutive-orchestrator.md  archon.hrm-resolutive-orchestrator.md  materialidadcfdi.url-sync-resolutive-orchestrator.md
alacritty/: alacritty.toml
archon/: .gitignore  archon_sldc.md  config.yaml
atuin/: .gitignore
claude/: .gitignore  settings.json  statusline.lua  statusline.sh
fish/: .gitignore  config.fish
gemini/: .gitignore
gh-dash/: .gitignore  config.yml
ghostty/: config
hammerspoon/: .gitignore  config.lua  init.lua  theme.lua
herdr/: config.toml
hermes/: .gitignore  config.yaml
hosts/: .gitignore  runbook_ubuntu.sh
hypr/: hyprland.conf
karabiner/: .gitignore  karabiner.json
kitty/: kitty.conf
mise/: cloud-profiles.md  config.toml
nixos/: .envrc  .gitignore  .sops.yaml  ATUIN-ZOXIDE-SETUP.md  NETWORK_MANAGEMENT_GUIDE.md  NUSHELL-SETUP.md  OUT-OF-THE-BOX-SUMMARY.md  QUICK-RECOVERY.md  README.md  REINSTALL-GUIDE.md  SOPS-DISASTER-RECOVERY.md  SOPS-EXPLICACION-COMPLETA.md  SOPS-QUICK-START.md  SOPS-SETUP-GUIDE.md  flake.nix  home.nix  justfile  shell.nix  test-fresh-install.sh
(+2087 files in other folders)
