[project]
name = "session-analyzer"
version = "0.1.0"
description = "Agent session analyzer — DuckDB-backed session pipeline for opencode, Claude, and pi agents"
requires-python = ">=3.11"
dependencies = [
    "duckdb",
    "PyYAML",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/session_analyzer"]

[tool.pytest.ini_options]
pythonpath = ["src"]
